[gd_scene load_steps=3 format=3 uid="uid://bemi8si3tw5n3"]

[ext_resource type="Script" path="res://MultiplayerController.gd" id="1_k3ujq"]

[sub_resource type="Theme" id="Theme_wvuct"]
default_font_size = 48

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_k3ujq")

[node name="Host" type="Button" parent="."]
custom_minimum_size = Vector2(400, 100)
offset_left = 50.0
offset_top = 50.0
offset_right = 450.0
offset_bottom = 150.0
theme = SubResource("Theme_wvuct")
text = "HOST"

[node name="Join" type="Button" parent="."]
custom_minimum_size = Vector2(400, 100)
offset_left = 500.0
offset_top = 50.0
offset_right = 900.0
offset_bottom = 150.0
theme = SubResource("Theme_wvuct")
text = "JOIN"

[node name="Start" type="Button" parent="."]
custom_minimum_size = Vector2(400, 100)
offset_left = 950.0
offset_top = 50.0
offset_right = 1350.0
offset_bottom = 150.0
theme = SubResource("Theme_wvuct")
text = "START"

[node name="LineEdit" type="LineEdit" parent="."]
custom_minimum_size = Vector2(50, 50)
offset_left = 50.0
offset_top = 175.0
offset_right = 1350.0
offset_bottom = 215.0

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
